2003-02-28  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-show-error-information): New customized variable.
	(w3m-w3m-attributes): Message strange `Location:' like lynx.
	(w3m-retrieve-and-render): When error occur, show error message
	in `w3m buffer' to be accompanied by `w3m-show-error-information'.
	(w3m-reload-this-page, w3m-redisplay-this-page)
	(w3m-redisplay-and-reset, w3m-redisplay-with-charset)
	(w3m-view-source, w3m-view-header): If `w3m-current-url' is nil,
	dont' execute command.
	(w3m): Guard from the bug of `select-frame-set-input-focus' in
	Emacs-21.3.x. If `w3m-current-url' is nil in `w3m buffer'

2003-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-shimbun-servers-file): Exclude fml,
	glimpse, lump, mailarc, mailman, mhonarc and text; indent.
	(w3mhack-generate-colon-keywords-file): indent.

	* shimbun/nnshimbun.el (gnus-group-make-shimbun-group): Accept
	arguments.

2003-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/nnshimbun.el (nnshimbun-is-compiled-for-modern-gnus):
	Make sure the `gnus-define-group-parameter' macro really works.

2003-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Add www.alltheweb.com
	suggested by Chris Beggy <chrisb@kippona.com>; make the default
	value more suitable to the language environment; don't use the old
	fashioned backquotes.
	(w3m-search-default-engine): Always default to google.
	(w3m-search-prefer-japanese-site): Remove.
	(w3m-search-inhibited-japanese-engines): Remove.
	(w3m-search): Bind `completion-ignore-case' to t.
	(w3m-search-quick-search-handler): Remove
	`w3m-search-prefer-japanese-site' and
	`w3m-search-inhibited-japanese-engines'.

2003-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/nnshimbun.el (nnshimbun-is-compiled-for-modern-gnus):
	New constant.
	(nnshimbun-find-group-parameters): Define it if nnshimbun.elc is
	compiled for the old Gnus but the newer Gnus is running.
